correctspacing between info links, add margin bottom to platt plus banner img and todays deals img

--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -35,6 +35,7 @@
 .todays-deal {
     width: 100%;
     box-shadow: 0px 2px 4px #999;
+    margin-bottom: 20px
 }
 
 @media only screen and ( min-width: 768px ) {
@@ -68,6 +69,7 @@
     }
     .todays-deal {
        width: 364px;
+       margin-bottom: 0;
     }
 }
 
